aggiunta sezione header top

--- a/index.html
+++ b/index.html
@@ -12,5 +12,56 @@
 </head>
 <body>
     
+    <header>
+
+        <div class="header-top">
+
+            <div class="clearfix centering">
+
+                <div class="header-logo float-l w-15">
+                    <img src="img/logo.svg" alt="">
+                </div>
+
+                <div class="header-ul float-l w-70">
+
+                    <ul>
+
+                        <li class="c-white">Scarica</li>
+                        <li class="c-white">Perchè Discord</li>
+                        <li class="c-white">Nitro</li>
+                        <li class="c-white">Sicurezza</li>
+                        <li class="c-white">Assistenza</li>
+
+                    </ul>
+
+                </div>
+
+                <div class="header-btn float-l w-15">
+                    <a class="tdn c-black" href="#">Accedi</a>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="header-bottom"></div>
+
+
+
+    </header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
