fixato list item menu

--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
             <div class="clearfix centering">
 
                 <div class="header-logo float-l w-15">
-                    <img src="img/logo.svg" alt="">
+                    <img src="img/logo.svg" alt="logo-discord">
                 </div>
 
                 <div class="header-ul float-l w-70">
 
                     <ul>
 
-                        <li class="c-white">Scarica</li>
-                        <li class="c-white">Perchè Discord</li>
-                        <li class="c-white">Nitro</li>
-                        <li class="c-white">Sicurezza</li>
-                        <li class="c-white">Assistenza</li>
+                        <li><a class="c-white" href="#">Scarica</a></li>
+                        <li><a class="c-white" href="#">Perchè Discord</a></li>
+                        <li><a class="c-white" href="#">Nitro</a></li>
+                        <li><a class="c-white" href="#">Sicurezza</a></li>
+                        <li><a class="c-white" href="#">Assistenza</a></li>
 
                     </ul>
 
                 </div>
 
                 <div class="header-btn float-l w-15">
-                    <a class="tdn c-black" href="#">Accedi</a>
+                    <a class="c-black" href="#">Accedi</a>
                 </div>
 
             </div>
