aggiunto header-bottom

--- a/index.html
+++ b/index.html
@@ -44,7 +44,25 @@
 
         </div>
 
-        <div class="header-bottom"></div>
+        <div class="header-bottom">
+
+            <div class="centering">
+
+                <h1 class="c-white">Il tuo posto per parlare</h1>
+
+                <p class="c-white">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo fruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+
+                <div>
+
+                    <a class="margin-r c-black" href="#">&#8615; Scarica per Mac</a>
+                    <a class="margin-l c-white" href="#">Apri Discord nel tuo browser</a>
+
+                </div>
+
+            </div>
+            
+
+        </div>
 
 
 
