aggiunta prima sezione

--- a/index.html
+++ b/index.html
@@ -64,11 +64,56 @@
 
         </div>
 
-
-
     </header>
 
+    <main>
 
+        <section class="first section">
+
+            <div class="centering clearfix">
+
+                <div class="float-l w-70">
+                    <img src="img/item1.svg" alt="foto-tag">
+                </div>
+                
+
+                <div class="aside-txt float-l w-30">
+
+                    <h2>
+                        Un luogo a invito con tutto lo spazio necessario per parlare
+                    </h2>
+                    <p>
+                        I server Discord sono organizzati in canali testuali in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.
+                    </p>
+
+                </div>
+
+
+            </div>
+
+
+        </section>
+
+
+        <section class="second section">
+
+            <img class="c-wave" src="img/wave.svg" alt="png-wave">
+
+            
+
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+    </main>
 
 
 
