aggiunta la seconda sezione

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 
             <div class="centering clearfix">
 
-                <div class="float-l w-70">
+                <div class="float-l w-60">
                     <img src="img/item1.svg" alt="foto-tag">
                 </div>
                 
 
-                <div class="aside-txt float-l w-30">
+                <div class="aside-txt margin-txt-l float-l w-30">
 
                     <h2>
                         Un luogo a invito con tutto lo spazio necessario per parlare
@@ -94,15 +94,35 @@
 
         </section>
 
+        <img class="c-wave" src="img/wave.svg" alt="png-wave">
 
-        <section class="second section">
-
-            <img class="c-wave" src="img/wave.svg" alt="png-wave">
+        <section class="second-section">
 
             
+            <div class="centering clearfix">
+
+                <div class="aside-txt margin-txt-r float-l w-30">
+
+                    <h2>
+                        Dove trovarsi è facile
+                    </h2>
+                    <p>
+                        Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.
+                    </p>
+
+                </div>
+
+                <div class="float-l w-60">
+                    <img src="img/item2.svg" alt="foto-tag">
+                </div>
+
+
+            </div>
 
 
         </section>
+
+        <img class="c-wave-w" src="img/wave.svg" alt="png-wave">
 
 
 
