--- a/index.html
+++ b/index.html
@@ -188,15 +188,103 @@
 
             </div>
 
-
         </section>
 
-
-
-
-
-
     </main>
+
+    <footer>
+
+        <div class="footer-top">
+
+            <div class="centering clearfix">
+
+                <div class="float-l-f first-column w-30">
+
+                    <h2 class="c-blue">Il tuo posto per parlare</h2>
+                    <div class="flag">
+                        <img src="img/ita.png" alt="bandiera-itas">
+                        <div class="txt-flag c-white">Italiano &#709;</div>                   
+                    </div>
+                    
+
+                </div>
+
+                <div class="float-l-f first-column w-12-5">
+                    
+                    <h6 class="c-blue">Prodotto</h6>
+                    <p class="c-white">Scarica</p>
+                    <p class="c-white">Perchè Discord</p>
+                    <p class="c-white">Nitro</p>
+                    <p class="c-white">Sicurezza</p>
+                    <p class="c-white">Assistenza</p>
+
+                </div>
+
+                <div class="float-l-f second-column w-12-5">
+
+                    <h6 class="c-blue">Compagnia</h6>
+                    <p class="c-white">Chi siamo</p>
+                    <p class="c-white">Lavora con noi</p>
+                    <p class="c-white">Marchio</p>
+                    <p class="c-white">Redazione</p>
+                    <p class="c-white">Negozio</p>
+
+                </div>
+
+                <div class="float-l-f third-column w-12-5">
+
+                    <h6 class="c-blue">Risorse</h6>
+                    <p class="c-white">Scarica</p>
+                    <p class="c-white">Perchè Discord</p>
+                    <p class="c-white">Nitro</p>
+                    <p class="c-white">Sicurezza</p>
+                    <p class="c-white">Assistenza</p>
+                    <p class="c-white">Scarica</p>
+                    <p class="c-white">Perchè Discord</p>
+                    <p class="c-white">Nitro</p>
+                    <p class="c-white">Sicurezza</p>
+                    <p class="c-white">Assistenza</p>
+                    <p class="c-white">Assistenza</p>
+
+                </div>
+
+                <div class="float-r fourth-column w-12-5">
+
+                    <h6 class="c-blue">Norme</h6>
+                    <p class="c-white">Scarica</p>
+                    <p class="c-white">Perchè Discord</p>
+                    <p class="c-white">Nitro</p>
+                    <p class="c-white">Sicurezza</p>
+                    <p class="c-white">Assistenza</p>
+
+                </div>
+
+
+            </div>
+
+        </div>
+
+        <div class="footer-bottom">
+
+            <div class="centering clearfix">
+
+                <div class="float-l w-50 footer-logo">
+                    <img src="img/logo.svg" alt="logo-discord">
+                </div>
+
+                <div class="float-r-f w-50 footer-register">
+                    <a class="c-white" href="#">Registrati</a>
+                </div>
+
+
+            </div>
+
+
+        </div>
+
+
+
+    </footer>
 
 
 
