aggiunti i font awesome

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Discord</title>
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/fontawesome.css">
 
 </head>
 <body>
@@ -54,7 +56,10 @@
 
                 <div>
 
-                    <a class="margin-r c-black" href="#">&#8615; Scarica per Mac</a>
+                    <a class="margin-r c-black" href="#">
+                        <i class="fas fa-long-arrow-alt-down"></i> 
+                        Scarica per Mac
+                    </a>
                     <a class="margin-l c-white" href="#">Apri Discord nel tuo browser</a>
 
                 </div>
@@ -180,7 +185,10 @@
                     </h3>
 
                     <div class="btn-sc-mac">
-                        <a class="c-white" href="#">&#8615; Scarica per Mac</a>
+                        <a class="c-white" href="#">
+                            <i class="fas fa-long-arrow-alt-down"></i>
+                            Scarica per Mac
+                        </a>
                     </div>
                     
 
@@ -203,7 +211,18 @@
                     <h2 class="c-blue">Il tuo posto per parlare</h2>
                     <div class="flag">
                         <img src="img/ita.png" alt="bandiera-itas">
-                        <div class="txt-flag c-white">Italiano &#709;</div>                   
+                        <div class="txt-flag c-white">Italiano 
+                            <i class="fal fas fa-chevron-down"></i>
+                        </div>                   
+                    </div>
+
+                    <div class="social-logo">
+
+                        <i class="fam fab fa-twitter c-white"></i>
+                        <i class="fam fab fa-instagram c-white"></i>
+                        <i class="fam fab fa-facebook c-white"></i>
+                        <i class="fam fab fa-youtube c-white"></i>
+
                     </div>
                     
 
