aggiunta ul alla sezione del footer

--- a/index.html
+++ b/index.html
@@ -229,52 +229,68 @@
                 </div>
 
                 <div class="float-l-f first-column w-12-5">
-                    
-                    <h6 class="c-blue">Prodotto</h6>
-                    <p class="c-white">Scarica</p>
-                    <p class="c-white">Perchè Discord</p>
-                    <p class="c-white">Nitro</p>
-                    <p class="c-white">Sicurezza</p>
-                    <p class="c-white">Assistenza</p>
+
+                    <ul>
+
+                        <li><a href="#"><h6 class="c-blue">Prodotto</h6></a></li>
+                        <li><a href="#"><p class="c-white">Scarica</p></a></li>
+                        <li><a href="#"><p class="c-white">Perchè Discord</p></a></li>
+                        <li><a href="#"><p class="c-white">Nitro</p></a></li>
+                        <li><a href="#"><p class="c-white">Sicurezza</p></a></li>
+                        <li><a href="#"><p class="c-white">Assistenza</p></a></li>
+
+                    </ul>                                                                                         
 
                 </div>
 
                 <div class="float-l-f second-column w-12-5">
 
-                    <h6 class="c-blue">Compagnia</h6>
-                    <p class="c-white">Chi siamo</p>
-                    <p class="c-white">Lavora con noi</p>
-                    <p class="c-white">Marchio</p>
-                    <p class="c-white">Redazione</p>
-                    <p class="c-white">Negozio</p>
+                    <ul>
+
+                        <li><a href="#"><h6 class="c-blue">Compagnia</h6></a></li>
+                        <li><a href="#"><p class="c-white">Chi siamo</p></a></li>
+                        <li><a href="#"><p class="c-white">Lavora con noi</p></a></li>
+                        <li><a href="#"><p class="c-white">Marchio</p></a></li>
+                        <li><a href="#"><p class="c-white">Redazione</p></a></li>
+                        <li><a href="#"><p class="c-white">Negozio</p></a></li>
+
+                    </ul> 
 
                 </div>
 
                 <div class="float-l-f third-column w-12-5">
 
-                    <h6 class="c-blue">Risorse</h6>
-                    <p class="c-white">Scarica</p>
-                    <p class="c-white">Perchè Discord</p>
-                    <p class="c-white">Nitro</p>
-                    <p class="c-white">Sicurezza</p>
-                    <p class="c-white">Assistenza</p>
-                    <p class="c-white">Scarica</p>
-                    <p class="c-white">Perchè Discord</p>
-                    <p class="c-white">Nitro</p>
-                    <p class="c-white">Sicurezza</p>
-                    <p class="c-white">Assistenza</p>
-                    <p class="c-white">Assistenza</p>
+                    <ul>
+
+                        <li><a href="#"><h6 class="c-blue">Risorse</h6></a></li>
+                        <li><a href="#"><p class="c-white">Scarica</p></a></li>
+                        <li><a href="#"><p class="c-white">Perchè Discord</p></a></li>
+                        <li><a href="#"><p class="c-white">Nitro</p></a></li>
+                        <li><a href="#"><p class="c-white">Sicurezza</p></a></li>
+                        <li><a href="#"><p class="c-white">Assistenza</p></a></li>
+                        <li><a href="#"><p class="c-white">Scarica</p></a></li>
+                        <li><a href="#"><p class="c-white">Perchè Discord</p></a></li>
+                        <li><a href="#"><p class="c-white">Nitro</p></a></li>
+                        <li><a href="#"><p class="c-white">Sicurezza</p></a></li>
+                        <li><a href="#"><p class="c-white">Assistenza</p></a></li>
+                        <li><a href="#"><p class="c-white">Assistenza</p></a></li>
+
+                    </ul> 
 
                 </div>
 
                 <div class="float-r fourth-column w-12-5">
 
-                    <h6 class="c-blue">Norme</h6>
-                    <p class="c-white">Scarica</p>
-                    <p class="c-white">Perchè Discord</p>
-                    <p class="c-white">Nitro</p>
-                    <p class="c-white">Sicurezza</p>
-                    <p class="c-white">Assistenza</p>
+                    <ul>
+
+                        <li><a href="#"><h6 class="c-blue">Norme</h6></a></li>
+                        <li><a href="#"><p class="c-white">Scarica</p></a></li>
+                        <li><a href="#"><p class="c-white">Perchè Discord</p></a></li>
+                        <li><a href="#"><p class="c-white">Nitro</p></a></li>
+                        <li><a href="#"><p class="c-white">Sicurezza</p></a></li>
+                        <li><a href="#"><p class="c-white">Assistenza</p></a></li>
+
+                    </ul> 
 
                 </div>
 
